amf-cli/shared/src/test/resources/parser-results/raml/error/not-seq-dependency-def-jsonchema.raml
#%RAML 1.0
title: JsonSchema array test


/endpoints:
  get:
    responses:
      200:
        body:
          application/json:
            type: |
              {
              	"$schema": "http://json-schema.org/draft-04/schema",
              	"additionalProperties": false,
              	"type": "array",
              	"id": "#phoneNumbers",
              	"items": {
              		"type": "object",
              		"properties": {
              			"type": {
              				"type": "string",
              				"enum": [
              					"home",
              					"work",
              					"mobile",
              					"alternate"
              				],
              				"id": "#type"
              			},
              			"number": {
              				"type": "string",
              				"pattern": ".+",
              				"id": "#number"
              			},
              			"extension": {
              				"type": "string",
              				"pattern": ".+",
              				"id": "#extension"
              			}
              		},
              		"dependencies": {
              			"extension": {
              				"properties": {
              					"type": {
              						"enum": [
              							"work"
              						]
              					}
              				}
              			}
              		}
              	}
              }

